fix(header): 🐛 Añadido z-index para que el menú quede siempre encima

--- a/public/styles.css
+++ b/public/styles.css
@@ -24,6 +24,7 @@ header {
   padding: 15px 20px;
   background: black;
   font-size: 18px;
+  z-index: 1000;
 }
 
 footer {
